feat:done with the homepage content

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
 
     <!-- SEO meta tags -->
-    <meta name="keywords" content="keywords, list, here, ...">
+    <meta name="keywords" content="queue, management, nowait, ...">
     <meta name="description" content="description here ...">
     <meta name="author" content="Barthez Kenwou" /> <!-- Specifies the author of the project -->
     <meta name="theme-color" content="#1E293B" /> <!-- Sets the theme color for mobile browsers -->
@@ -28,11 +28,11 @@
     <meta property="og:image:heigh" content="630" />
     <meta property="og:url" content="https://iphone-cameroon.onrender.com" />
     <meta property="og:type" content="website" />
-    <meta property="og:site-name" content="Iphone Cameroon" />
+    <meta property="og:site-name" content="NoWait-smart queue management" />
 
     <!-- Twitter Card meta tags for social media sharing -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Iphone Cameroon" />
+    <meta name="twitter:title" content="NoWait-smart queue management" />
     <meta name="twitter:description" content="description content" />
     <meta name="twitter:image" content="https://iphone-cameroon.onrender.com/images/preview-image.png" />
     <meta property="twitter:image:alt" content="image alt content !" />
@@ -56,15 +56,15 @@
     <meta name="HandheldFriendly" content="true" /> <!-- Indicates the page is mobile-friendly -->
 
     <!-- Page title -->
-    <title>iPhone Cameroon - Premium Devices & Services at Your Fingertips</title>
+    <title>NoWait-smart queue management</title>
 
     <!-- Icons for devices and browsers -->
     <link rel="apple-touch-icon" href="favicon_io/apple-touch-icon.png" /> <!-- Apple devices icon -->
     
     <!-- Favicon for the project -->
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon?.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
     <link rel="manifest" href="favicon_io/site.webmanifest">
 
     <!-- Link Google font -->
